--- a/css/mondrian.css
+++ b/css/mondrian.css
@@ -187,11 +187,41 @@ ul, li {
 .rothko-no3 li:nth-child(6){
     grid-row: span 5;
     border-top: 8px solid #D86132;
-
 }
 .rothko-no3 li:nth-child(7){
     grid-row: span 5;
 }
+
+.rothko-no61{
+    width: 400px;
+}
+.rothko-no61 ul{
+/*    border: 10px solid #1B1F5C;*/
+    border: 15px solid hsla(236, 55%, 23%, 0.9);
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-auto-rows: 52px;
+    grid-auto-flow: dense;
+}
+.rothko-no61 li:nth-child(1){
+    grid-row: span 4;
+/*    background: #380E1A;*/
+    background: hsla(343, 60%, 14%, 1.0);
+    box-shadow: 0 0 5px 3px hsla(343, 60%, 14%, 1.0);
+}
+.rothko-no61 li:nth-child(2){
+    grid-row: span 2;
+/*    background: #3B57BA;*/
+    background: hsla(227, 52%, 48%, 1.0);
+    box-shadow: 0 0 5px 3px hsla(227, 52%, 48%, 0.8);
+}
+.rothko-no61 li:nth-child(3){
+    grid-row: span 3;
+/*    background: #2F2943;*/
+    background: hsla(254, 24%, 21%, 1.0);
+    box-shadow: 0 0 5px 3px hsla(254, 24%, 21%, 10.8);
+}
+
 
 /*colors*/
 .black{
